# This is the full fwbackups changelog, with detailed listing of changes between
# various versions dating all the way back from the very beginning.

|| Version 1.43.3rc3 changes ||
  * Wed Jul 29 2009 Stewart Adam <s.adam at diffingo.com>
    - Remove the __raiseOnException property from runFuncAsThread() and instead
      offer a universal way of accessing thread exception information
    - Fix a problem where paramiko threads were left alive on exit, preventing
      the program from terminating
    - Fix a probem where the autostart function would not work if fwbackups was
      not configured with --prefix=/usr
    - Use intltool instead of glib gettext for translations
  
  * Mon Jul 27 2009 Stewart Adam <s.adam at diffingo.com>
    - Tweaks to better support non-/usr/share install locations
    - Import most things after bug reporting system is initialized in order to
      display dependency errors graphically
    - Better cleanup when running "make uninstall"

  * Thu Jul 23 2009 Stewart Adam <s.adam at diffingo.com>
    - Fix a problem which caused one-time backups to fail

|| Version 1.43.3rc2 changes ||
  * Thu May 28 2009 Stewart Adam <s.adam at diffingo.com>
    - Fix a problem where paths ending in an apostrophe could be cause an
      error while running backup operations
    - Fix arguments to sftp.put in backup.py so that the backup filename does
      not have basename() run twice on it
    - Fix a problem where outputting a list of installed packages on systems
      using Pacman or RPM would cause a backup to fail

  * Wed May 27 2009 Stewart Adam <s.adam at diffingo.com>
    - Properly disable incremental option in UI for one-time backups
    - Add a status property to better handle operation progress updates

  * Mon May 25 2009 Stewart Adam <s.adam at diffingo.com>
    - When applicable, check if pywin32 is installed

  * Tue May 18 2009 Stewart Adam <s.adam at diffingo.com>